@@ -4,11 +4,15 @@ import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
 import org.springframework.http.HttpMethod;
 import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.AuthenticationProvider;
 import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.authentication.configuration.AuthenticationConfiguration;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
+import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
+import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.http.SessionCreationPolicy;
+import org.springframework.security.core.userdetails.UserDetailsService;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
@@ -18,103 +22,99 @@ import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
 import ru.academy.homework.motoshop.services.UserDetailsServiceImpl;
 
-import java.util.Arrays;
 import java.util.List;
 
-/**
- * Конфигурация безопасности приложения.
- * Настраивает аутентификацию, авторизацию и CORS.
- */
 @Configuration
-@EnableMethodSecurity
+@EnableWebSecurity
+@EnableMethodSecurity(prePostEnabled = true)
 public class SecurityConfig {
 
-    private final UserDetailsServiceImpl userDetailsService;
     private final AuthEntryPointJwt unauthorizedHandler;
-    private final AuthTokenFilter authTokenFilter;
+    private final JwtAuthTokenFilter authTokenFilter;
+    private final UserDetailsService userDetailsService;
 
-    /**
-     * Конструктор конфигурации безопасности.
-     *
-     * @param userDetailsService сервис для загрузки данных пользователя
-     * @param unauthorizedHandler обработчик неавторизованных запросов
-     * @param authTokenFilter JWT фильтр аутентификации
-     */
-    public SecurityConfig(UserDetailsServiceImpl userDetailsService,
-                          AuthEntryPointJwt unauthorizedHandler,
-                          AuthTokenFilter authTokenFilter) {
-        this.userDetailsService = userDetailsService;
+    public SecurityConfig(AuthEntryPointJwt unauthorizedHandler,
+                          JwtAuthTokenFilter authTokenFilter,
+                          UserDetailsService userDetailsService) {
         this.unauthorizedHandler = unauthorizedHandler;
         this.authTokenFilter = authTokenFilter;
+        this.userDetailsService = userDetailsService;
     }
 
-    /**
-     * Настраивает провайдер аутентификации.
-     *
-     * @return настроенный DaoAuthenticationProvider
-     */
     @Bean
-    public DaoAuthenticationProvider authenticationProvider() {
+    public PasswordEncoder passwordEncoder() {
+        return new BCryptPasswordEncoder();
+    }
+
+    @Bean
+    public AuthenticationProvider authenticationProvider() {
         DaoAuthenticationProvider authProvider = new DaoAuthenticationProvider();
         authProvider.setUserDetailsService(userDetailsService);
         authProvider.setPasswordEncoder(passwordEncoder());
         return authProvider;
     }
 
-    /**
-     * Создает менеджер аутентификации.
-     *
-     * @param authConfig конфигурация аутентификации
-     * @return менеджер аутентификации
-     * @throws Exception если произошла ошибка при создании
-     */
     @Bean
-    public AuthenticationManager authenticationManager(AuthenticationConfiguration authConfig) throws Exception {
-        return authConfig.getAuthenticationManager();
+    public AuthenticationManager authenticationManager(AuthenticationConfiguration config) throws Exception {
+        return config.getAuthenticationManager();
     }
 
-    /**
-     * Создает кодировщик паролей.
-     *
-     * @return экземпляр BCryptPasswordEncoder
-     */
-    @Bean
-    public PasswordEncoder passwordEncoder() {
-        return new BCryptPasswordEncoder();
-    }
-
-    /**
-     * Настраивает цепочку фильтров безопасности.
-     *
-     * @param http объект для настройки безопасности
-     * @return сконфигурированная цепочка фильтров безопасности
-     * @throws Exception если произошла ошибка при настройке
-     */
     @Bean
     public SecurityFilterChain filterChain(HttpSecurity http) throws Exception {
         http
                 .cors(cors -> cors.configurationSource(corsConfigurationSource()))
-                .csrf(csrf -> csrf.disable())
-                .exceptionHandling(exception -> exception.authenticationEntryPoint(unauthorizedHandler))
-                .sessionManagement(session -> session.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
+                .csrf(AbstractHttpConfigurer::disable)
+                .exceptionHandling(exception -> exception
+                        .authenticationEntryPoint(unauthorizedHandler)
+                )
+                .sessionManagement(session -> session
+                        .sessionCreationPolicy(SessionCreationPolicy.STATELESS)
+                )
                 .authorizeHttpRequests(auth -> auth
-                        // Разрешаем доступ без аутентификации к статическим ресурсам и эндпоинтам аутентификации
+                        // Публичные endpoints - включаем .well-known
+                        .requestMatchers("/.well-known/**").permitAll()
                         .requestMatchers("/").permitAll()
                         .requestMatchers("/index.html").permitAll()
                         .requestMatchers("/api/products.html").permitAll()
                         .requestMatchers("/api/product.html").permitAll()
+                        .requestMatchers("/api/categories.html").permitAll()
                         .requestMatchers("/api/auth/**").permitAll()
                         .requestMatchers("/register").permitAll()
-                        .requestMatchers("/auth/**").permitAll()  // Это должно покрывать /auth/register, /auth/login
+                        .requestMatchers("/auth/**").permitAll()
                         .requestMatchers("/css/**").permitAll()
                         .requestMatchers("/api/test/**").permitAll()
                         .requestMatchers("/js/**").permitAll()
                         .requestMatchers("/images/**").permitAll()
                         .requestMatchers("/error").permitAll()
+                        .requestMatchers("/favicon.ico").permitAll()
                         .requestMatchers(HttpMethod.GET, "/api/products").permitAll()
+                        .requestMatchers("/login").permitAll()
 
-                        // Все остальные запросы требуют аутентификации
+                        // Админские endpoints
+                        .requestMatchers("/admin/**").hasRole("ADMIN")
+                        .requestMatchers("/moderator/**").hasAnyRole("MODERATOR", "ADMIN")
+
+                        // Защищенные endpoints
+                        .requestMatchers("/profile").authenticated()
+                        .requestMatchers("/api/auth/validate").authenticated()
+
                         .anyRequest().authenticated()
+                )
+                // Форма логина
+                .formLogin(form -> form
+                        .loginPage("/api/auth/login")
+                        .loginProcessingUrl("/api/auth/login")
+                        .defaultSuccessUrl("/admin/dashboard", true)
+                        .failureUrl("/api/auth/login?error=true")
+                        .permitAll()
+                )
+                // Logout
+                .logout(logout -> logout
+                        .logoutUrl("/api/auth/logout")
+                        .logoutSuccessUrl("/api/auth/login")
+                        .invalidateHttpSession(true)
+                        .deleteCookies("jwtToken", "JSESSIONID")
+                        .permitAll()
                 );
 
         http.authenticationProvider(authenticationProvider());
@@ -123,24 +123,16 @@ public class SecurityConfig {
         return http.build();
     }
 
-    /**
-     * Настраивает CORS для приложения.
-     *
-     * @return источник конфигурации CORS
-     */
     @Bean
     public CorsConfigurationSource corsConfigurationSource() {
         CorsConfiguration configuration = new CorsConfiguration();
         configuration.setAllowedOriginPatterns(List.of("*"));
-        configuration.setAllowedMethods(Arrays.asList("GET", "POST", "PUT", "DELETE", "OPTIONS"));
+        configuration.setAllowedMethods(List.of("GET", "POST", "PUT", "DELETE", "OPTIONS"));
         configuration.setAllowedHeaders(List.of("*"));
         configuration.setAllowCredentials(true);
-
-        // Явно разрешаем заголовки авторизации для JWT
-        configuration.setExposedHeaders(List.of("Authorization"));
-
         UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
         source.registerCorsConfiguration("/**", configuration);
         return source;
     }
+
 }
